--- a/vue-login/package.json
+++ b/vue-login/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "axios": "^0.17.0",
     "element-ui": "^2.0.3",
+    "file-saver": "^1.3.3",
     "jquery": "^3.2.1",
     "js-base64": "^2.3.2",
+    "jszip": "^3.1.5",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "nprogress": "^0.2.0",
     "style-loader": "^0.19.0",
+    "tinymce": "^4.7.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue2-animate": "^1.0.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.11.10"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -46,12 +51,15 @@
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
+    "script-loader": "^0.7.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
+    "vue-html5-editor": "^1.1.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vue-tinymce": "github:lpreterite/vue-tinymce",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
