--- a/vue-login/package.json
+++ b/vue-login/package.json
@@ -13,12 +13,14 @@
     "axios": "^0.17.0",
     "element-ui": "^2.0.3",
     "file-saver": "^1.3.3",
+    "highcharts": "^6.0.3",
     "jquery": "^3.2.1",
     "js-base64": "^2.3.2",
     "jszip": "^3.1.5",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "nprogress": "^0.2.0",
+    "screenfull": "^3.3.2",
     "style-loader": "^0.19.0",
     "tinymce": "^4.7.3",
     "vue": "^2.5.2",
